config/networking/network-policies.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")

#@ def cfdb_enabled():
#@   return len(data.values.uaa.database.host) == 0 or len(data.values.capi.database.host) == 0
#@ end

#@ def database_egress():
to:
#@ if cfdb_enabled():
- namespaceSelector:
    matchLabels:
      name: cf-db
  podSelector:
    matchLabels:
      release: cf-db
#@ else:
- ipBlock:
    cidr: 0.0.0.0/0
#@ end
ports:
- protocol: TCP
  port: #@ data.values.capi.database.port
- protocol: TCP
  port: #@ data.values.uaa.database.port
#@ end

#! TODO: Should be labeled in capi-k8s-release
#@overlay/match by=overlay.and_op(overlay.subset({"metadata":{"name":"cf-workloads-staging"}}), overlay.subset({"kind": "Namespace"}))
---
metadata:
  #@overlay/match missing_ok=True
  labels:
    #@overlay/match missing_ok=True
    name: #@ data.values.staging_namespace

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: #@ data.values.system_namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
#@ if cfdb_enabled():
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cf-db
spec:
  podSelector: {}
  policyTypes:
  - Ingress
#@ end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cf-blobstore
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-control-plane
  namespace: #@ data.values.system_namespace
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
  policyTypes:
  - Ingress
  - Egress
#@ if cfdb_enabled():
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-control-plane
  namespace: cf-db
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
  policyTypes:
  - Ingress
  - Egress
#@ end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-control-plane
  namespace: cf-blobstore
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: #@ data.values.system_namespace
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  policyTypes:
  - Egress
#@ if cfdb_enabled():
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: cf-db
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  policyTypes:
  - Egress
#@ end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: cf-blobstore
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  policyTypes:
  - Egress
#@ if cfdb_enabled():
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-db
  namespace: cf-db
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      release: cf-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          job-name: ccdb-migrate
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-worker
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-clock
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-server
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-deployment-updater
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: uaa
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
#@ end
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: uaa
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: uaa
  ingress:
  - from:
    - podSelector:
        matchLabels:
          istio: ingressgateway
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
    - podSelector:
        matchLabels:
          app: log-cache
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-server
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-controllers
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
  egress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-server
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          istio: ingressgateway
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-controllers
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          name: eirini
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app: log-cache
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    ports:
      - protocol: TCP
        port: 80  
  - from:
    - podSelector:
        matchLabels:
          name: eirini-task-reporter
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          name: eirini-events
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    ports:
    - protocol: TCP
      port: 9023  
  egress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-deployment-updater-eirini
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-deployment-updater
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
      podSelector:
        matchLabels:
          name: eirini
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-deployment-updater
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-deployment-updater
  egress:
  - #@ database_egress()

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-clock-eirini
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-clock
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
      podSelector:
        matchLabels:
          name: eirini
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-clock
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-clock
  egress:
  - #@ database_egress()
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-worker
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-worker
  egress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ccdb-migrate
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      job-name: ccdb-migrate
  egress:
  - #@ database_egress()
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-blobstore-minio
  namespace: cf-blobstore
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      release: cf-blobstore
  ingress:
  - from:
    - podSelector:
        matchLabels:
          istio: ingressgateway
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
    - podSelector:
        matchLabels:
          cloudfoundry.org/source_type: STG
      namespaceSelector:
        matchLabels:
          name: #@ data.values.staging_namespace
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-server
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-worker
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-deployment-updater
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-clock
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eirini
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      name: eirini
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-deployment-updater
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-clock
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-worker
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-server
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eirini-events
  namespace: #@ data.values.system_namespace
spec:
  podSelector:
    matchLabels:
      name: eirini-events
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eirini-task-reporter
  namespace: #@ data.values.system_namespace
spec:
  podSelector:
    matchLabels:
      name: eirini-task-reporter
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eirini-controller
  namespace: #@ data.values.system_namespace
spec:
  podSelector:
    matchLabels:
      name: eirini-controller
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eirini-instance-index-env-injector
  namespace: #@ data.values.system_namespace
spec:
  podSelector:
    matchLabels:
      name: instance-index-env-injector
  egress:
  - {}
  ingress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-controllers
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-controllers
  egress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: routecontroller
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: routecontroller
  egress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: log-cache
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: log-cache
  ingress:
  - from:
    - podSelector:
        matchLabels:
          istio: ingressgateway
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
    - podSelector:
        matchLabels:
          app: fluentd
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: uaa
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-server
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: metric-proxy
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: metric-proxy
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-server
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
  egress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: fluentd
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: fluentd
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-server
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-worker
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-clock
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-deployment-updater
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          istio: ingressgateway
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
  egress:
  - {}
